--- a/start_page/templates/start_page/seven_page/aboniment.html
+++ b/start_page/templates/start_page/seven_page/aboniment.html
@@ -4380,7 +4380,7 @@
                         data-field-top-res-480-value="1402" data-field-left-res-480-value="182" data-field-top-res-640-value="1390" data-field-left-res-640-value="263" data-field-top-res-960-value="1938" data-field-left-res-960-value="104">
                         <div class="tn-atom" field="tn_text_1678715853079">{% if aboniment_list == None %}
                             1000₽
-                            {% else %}{% if aboniment_list.price_1 %}{{ aboniment_list.price_1 }}
+                            {% else %}{% if aboniment_list.price_1 %}{{ aboniment_list.price_1 }}₽
                             {% else %}1000₽
                             {% endif %}{% endif %}</div>
                     </div>
@@ -4389,7 +4389,7 @@
                         data-field-top-res-480-value="1386" data-field-left-res-480-value="212" data-field-top-res-640-value="1374" data-field-left-res-640-value="293" data-field-top-res-960-value="1922" data-field-left-res-960-value="134">
                         <div class="tn-atom" field="tn_text_1678715853082">{% if aboniment_list == None %}
                             1500₽
-                            {% else %}{% if aboniment_list.old_price_1 %}{{ aboniment_list.old_price_1 }}
+                            {% else %}{% if aboniment_list.old_price_1 %}{{ aboniment_list.old_price_1 }}₽
                             {% else %}1500₽
                             {% endif %}{% endif %}</div>
                     </div>
@@ -4432,9 +4432,21 @@
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="397" data-field-left-res-320-value="30" data-field-top-res-480-value="362" data-field-left-res-480-value="121" data-field-top-res-640-value="370" data-field-left-res-640-value="199"
                         data-field-top-res-960-value="386" data-field-left-res-960-value="42">
                         <div class="tn-atom" field="tn_text_1678715853142">{% if aboniment_list == None %}
-                            Онлайн практики:
+                            <b>Онлайн практики:</b><br><br>
+                                <ul><li>3 онлайн занятий йогой с Ириной и Антоном в ZOOM + записи этих уроков</li></ul>
+                                <ul><li>2 онлайн медитаций в ZOOM со Станиславом + записи этих уроков</li></ul><br>
+                                <b>Записи классов:</b><br><br>
+                                <ul><li>Специализированный комплекс йоги для женского здоровья во время периода (видео-запись урока и лекция)</li></ul>
+                                <ul><li>1 класс классической пранаямы Нади Шодхана (запись)</li></ul>
+                                <ul><li>2 класса по 10 минут «Будь в ресурсе» (запись)</li></ul>
                             {% else %}{% if aboniment_list.desc_1 %}{{ aboniment_list.desc_1 }}
-                            {% else %}Онлайн практики:
+                            {% else %}<b>Онлайн практики:</b><br><br>
+                                <ul><li>3 онлайн занятий йогой с Ириной и Антоном в ZOOM + записи этих уроков</li></ul>
+                                <ul><li>2 онлайн медитаций в ZOOM со Станиславом + записи этих уроков</li></ul><br>
+                                <b>Записи классов:</b><br><br>
+                                <ul><li>Специализированный комплекс йоги для женского здоровья во время периода (видео-запись урока и лекция)</li></ul>
+                                <ul><li>1 класс классической пранаямы Нади Шодхана (запись)</li></ul>
+                                <ul><li>2 класса по 10 минут «Будь в ресурсе» (запись)</li></ul>
                             {% endif %}{% endif %}
                         </div>
                     </div>
@@ -4493,7 +4505,7 @@
                         data-field-left-res-960-value="412">
                         <div class="tn-atom" field="tn_text_1678841474042">{% if aboniment_list == None %}
                             2450₽
-                            {% else %}{% if aboniment_list.price_2 %}{{ aboniment_list.price_2 }}
+                            {% else %}{% if aboniment_list.price_2 %}{{ aboniment_list.price_2 }}₽
                             {% else %}2450₽
                             {% endif %}{% endif %}</div>
                     </div>
@@ -4502,7 +4514,7 @@
                         data-field-top-res-480-value="3292" data-field-left-res-480-value="213" data-field-top-res-640-value="3244" data-field-left-res-640-value="294" data-field-top-res-960-value="1923" data-field-left-res-960-value="455">
                         <div class="tn-atom" field="tn_text_1678841474022">{% if aboniment_list == None %}
                             4000₽
-                            {% else %}{% if aboniment_list.old_price_2 %}{{ aboniment_list.old_price_2 }}
+                            {% else %}{% if aboniment_list.old_price_2 %}{{ aboniment_list.old_price_2 }}₽
                             {% else %}4000₽
                             {% endif %}{% endif %}</div>
                     </div>
@@ -4516,9 +4528,34 @@
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="1664" data-field-left-res-320-value="30" data-field-top-res-480-value="1736" data-field-left-res-480-value="120" data-field-top-res-640-value="1757"
                         data-field-left-res-640-value="200" data-field-top-res-960-value="386" data-field-left-res-960-value="361">
                         <div class="tn-atom" field="tn_text_1678715853268">{% if aboniment_list == None %}
-                            Онлайн практики:
+                            <b>Онлайн практики:</b><br><br>
+                                <ul><li>3 онлайн занятий йогой с Ириной и Антоном в ZOOM + записи этих уроков</li></ul>
+                                <ul><li>2 онлайн медитаций в ZOOM со Станиславом + записи этих уроков</li></ul><br>
+                                <b>Записи классов:</b><br><br>
+                                <ul><li>Специализированный комплекс йоги для женского здоровья во время периода (видео-запись урока и лекция)</li></ul>
+                                <ul><li>1 класс классической пранаямы Нади Шодхана (запись)</li></ul>
+                                <ul><li>2 класса по 10 минут «Будь в ресурсе» (запись)</li></ul>
+                                <ul><li>2 комплекса практики приветствия солнцу «Сурья Намаскар"(видео-записи уроков)
+                                </li></ul>
+                                <ul><li>3 комплекса восстанавливающих практик</li></ul><br><br>
+                                <b>Форма обратной связи:</b><br><br>
+                                <ul><li>Закрытый Телеграм-чат с поддержкой преподавателей + закрытое Телеграм-сообщество
+                                    Йога-клуба (самая большая ценность клуба)</li></ul>
                             {% else %}{% if aboniment_list.desc_2 %}{{ aboniment_list.desc_2 }}
-                            {% else %}Онлайн практики:
+                            {% else %}<b>Онлайн практики:</b><br><br>
+                                <ul><li>3 онлайн занятий йогой с Ириной и Антоном в ZOOM + записи этих уроков</li></ul>
+                                <ul><li>2 онлайн медитаций в ZOOM со Станиславом + записи этих уроков</li></ul><br>
+                                <b>Записи классов:</b><br><br>
+                                <ul><li>Специализированный комплекс йоги для женского здоровья во время периода
+                                    (видео-запись урока и лекция)</li></ul>
+                                <ul><li>1 класс классической пранаямы Нади Шодхана (запись)</li></ul>
+                                <ul><li>2 класса по 10 минут «Будь в ресурсе» (запись)</li></ul>
+                                <ul><li>2 комплекса практики приветствия солнцу «Сурья Намаскар"
+                                    (видео-записи уроков)</li></ul>
+                                <ul><li>3 комплекса восстанавливающих практик</li></ul><br><br>
+                                <b>Форма обратной связи:</b><br><br>
+                                <ul><li>Закрытый Телеграм-чат с поддержкой преподавателей + закрытое
+                                    Телеграм-сообщество Йога-клуба (самая большая ценность клуба)</li></ul>
                             {% endif %}{% endif %}
                         </div>
                     </div>
@@ -4571,7 +4608,7 @@
                         <div class="tn-atom" field="tn_text_1678715853308">{% if aboniment_list == None %}
                             Подписка<br>на 3 месяца
                             {% else %}{% if aboniment_list.birka_3 %}{{ aboniment_list.birka_3 }}
-                            {% else %}ППодписка<br>на 3 месяца
+                            {% else %}Подписка<br>на 3 месяца
                             {% endif %}{% endif %}</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__5626198391678715853190 t-animate" data-elem-id="1678715853190" data-elem-type="text" data-field-top-value="1362" data-field-left-value="450" data-field-width-value="299" data-field-axisy-value="top"
@@ -4594,7 +4631,7 @@
                         data-field-left-res-960-value="726">
                         <div class="tn-atom" field="tn_text_1678715853167">{% if aboniment_list == None %}
                             5990₽
-                            {% else %}{% if aboniment_list.price_3 %}{{ aboniment_list.price_3 }}
+                            {% else %}{% if aboniment_list.price_3 %}{{ aboniment_list.price_3 }}₽
                             {% else %}5990₽
                             {% endif %}{% endif %}</div>
                     </div>
@@ -4608,7 +4645,7 @@
                                 <li>Интенсив по йоге «Свобода движения» (комплексы на каждый день). 5 проф. классов
                                     по 10 минут с акцентом на разные части тела.</li>
                             </ul>
-                            {% else %}{% if aboniment_list.bonus_3 %}{{ aboniment_list.bonus_3 }}
+                            {% else %}{% if aboniment_list.bonus_2 %}{{ aboniment_list.bonus_2 }}
                             {% else %}<ul>
                                 <li>Интенсив по йоге «Свобода движения» (комплексы на каждый день). 5 проф. классов
                                     по 10 минут с акцентом на разные части тела.</li>
@@ -4622,7 +4659,7 @@
                         data-field-top-res-480-value="5225" data-field-left-res-480-value="211" data-field-top-res-640-value="5086" data-field-left-res-640-value="292" data-field-top-res-960-value="1912" data-field-left-res-960-value="768">
                         <div class="tn-atom" field="tn_text_1678715853169">{% if aboniment_list == None %}
                             8500₽
-                            {% else %}{% if aboniment_list.old_price_3 %}{{ aboniment_list.old_price_3 }}
+                            {% else %}{% if aboniment_list.old_price_3 %}{{ aboniment_list.old_price_3 }}₽
                             {% else %}8500₽
                             {% endif %}{% endif %}</div>
                     </div>
@@ -4636,9 +4673,35 @@
                         data-animate-distance="100" data-animate-mobile="y" data-field-top-res-320-value="3358" data-field-left-res-320-value="40" data-field-top-res-480-value="3640" data-field-left-res-480-value="119" data-field-top-res-640-value="3600"
                         data-field-left-res-640-value="200" data-field-top-res-960-value="370" data-field-left-res-960-value="676">
                         <div class="tn-atom" field="tn_text_1678841158249">{% if aboniment_list == None %}
-                            Онлайн практики:
+                            <b>Онлайн практики:</b><br><br>
+                                <ul><li>3 онлайн занятий йогой с Ириной и Антоном в ZOOM + записи этих уроков</li></ul>
+                                <ul><li>2 онлайн медитаций в ZOOM со Станиславом + записи этих уроков</li></ul><br>
+                                <b>Записи классов:</b><br><br>
+                                <ul><li>Специализированный комплекс йоги для женского здоровья во время периода
+                                    (видео-запись урока и лекция)</li></ul>
+                                <ul><li>1 класс классической пранаямы Нади Шодхана (запись)</li></ul>
+                                <ul><li>2 класса по 10 минут «Будь в ресурсе» (запись)</li></ul>
+                                <ul><li>2 комплекса практики приветствия солнцу «Сурья Намаскар"
+                                    (видео-записи уроков)</li></ul>
+                                <ul><li>3 комплекса восстанавливающих практик</li></ul><br><br>
+                                <b>Форма обратной связи:</b><br><br>
+                                <ul><li>Закрытый Телеграм-чат с поддержкой преподавателей + закрытое
+                                    Телеграм-сообщество Йога-клуба (самая большая ценность клуба)</li></ul>
                             {% else %}{% if aboniment_list.desc_3 %}{{ aboniment_list.desc_3 }}
-                            {% else %}Онлайн практики:
+                            {% else %}<b>Онлайн практики:</b><br><br>
+                                <ul><li>3 онлайн занятий йогой с Ириной и Антоном в ZOOM + записи этих уроков</li></ul>
+                                <ul><li>2 онлайн медитаций в ZOOM со Станиславом + записи этих уроков</li></ul><br>
+                                <b>Записи классов:</b><br><br>
+                                <ul><li>Специализированный комплекс йоги для женского здоровья во время периода
+                                    (видео-запись урока и лекция)</li></ul>
+                                <ul><li>1 класс классической пранаямы Нади Шодхана (запись)</li></ul>
+                                <ul><li>2 класса по 10 минут «Будь в ресурсе» (запись)</li></ul>
+                                <ul><li>2 комплекса практики приветствия солнцу «Сурья Намаскар"
+                                    (видео-записи уроков)</li></ul>
+                                <ul><li>3 комплекса восстанавливающих практик</li></ul><br><br>
+                                <b>Форма обратной связи:</b><br><br>
+                                <ul><li>Закрытый Телеграм-чат с поддержкой преподавателей + закрытое
+                                    Телеграм-сообщество Йога-клуба (самая большая ценность клуба)</li></ul>
                             {% endif %}{% endif %}
                         </div>
                     </div>
@@ -4672,6 +4735,10 @@
                             </ul>
                             {% else %}{% if aboniment_list.bonus_3 %}{{ aboniment_list.bonus_3 }}
                             {% else %}
+                            <ul>
+                                <li>Интенсив по йоге «Свобода движения» (комплексы на каждый день). 5 проф. классов
+                                    по 10 минут с акцентом на разные части тела.</li>
+                            </ul>
                             {% endif %}{% endif %}
                         </div>
                     </div>
