--- a/start_page/templates/start_page/pop_up/hard.html
+++ b/start_page/templates/start_page/pop_up/hard.html
@@ -9,12 +9,95 @@
                 <div class="t-popup__container t-width t-width_10">
                     <div class="t868__code-wrap">
 
-                        <script id="8ba7e608bbcaa620ceeea3ecccc8c4cff6a629ee" src="https://ymclub.getcourse.ru/pl/lite/widget/script?id=872782"></script>
+
+
+
+
+
+                        <div class="modal-header t-popup__close t-popup__block-close">
+                        <button type="button" class="close d-flex align-items-center justify-content-center t-popup__block-close-button t-popup__close-wrapper" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true" class="ion-ios-close"></span>
+                        </button>
+		            </div>
+
+		      <div class="modal-body p-4 py-5 p-md-5">
+		      	<h3 class="text-center mb-3">{% if form_title == None %}
+                                        Оформить подписку на месяц тариф "Просветленный" на июль
+                                        {% else %}{% if form_title.title1_3 %}{{ form_title.title1_3 }}
+                                        {% else %}
+                                        Оформить подписку на месяц тариф "Просветленный" на июль
+                                        {% endif %}
+                                        {% endif %}</h3>
+
+		      	<form method="post" action="{% url 'thanks' %}" class="signup-form">
+                    {% csrf_token %}
+		      		<div class="form-group mb-2">
+		      			<label for="name">Ваше имя</label>
+		      			{{ form.name }}
+		      		</div>
+		      		<div class="form-group mb-2">
+		      			<label for="phone">Ваш телефон</label>
+		      			{{ form.phone }}
+		      		</div>
+	            <div class="form-group mb-2">
+	            	<label for="telegram">Telegram</label>
+	                {{ form.telegram }}
+	            </div>
+                    <input type="hidden" name="source" value="Сайт"/>
+                    <input type="hidden" name="price" value="{% if aboniment_list != None %}{% if aboniment_list.price_3 %}{{ aboniment_list.price_3 }}{% endif %}{% endif %}"/>
+
+					<h4 class="text-left mb-3">{% if form_title == None %}
+						Онлайн клуб йоги и медитации - подписка на июль
+                                        {% else %}{% if form_title.title2_3 %}{{ form_title.title2_3 }}
+
+										{% if aboniment_list != None %}
+										{% if aboniment_list.price_3 %}<span style="float:right">
+                                        <s>{{ aboniment_list.old_price_3 }}₽</s> {{ aboniment_list.price_3 }}₽</span>
+                                        {% endif %}
+                                        {% endif %}
+
+
+
+
+                                        {% else %}
+                                        Онлайн клуб йоги и медитации - подписка на июль
+                                        {% endif %}
+                                        {% endif %}</h4>
+                    <br>
+
+                    <h6 class="text-left mb-3">{% if form_title == None %}
+						                Лучший продукт на рынке
+                                        {% else %}{% if form_title.desc_3 %}{{ form_title.desc_3 }}
+
+                                        {% else %}
+
+						                Лучший продукт на рынке
+                                        {% endif %}
+                                        {% endif %}</h6>
+
+
+
+
+
+
+	            <div class="form-group mb-2">
+	            	<button type="submit" class="form-control btn btn-primary rounded submit px-3">
+                        {% if form_title == None %}ОФОРМИТЬ{% else %}
+                        {% if form_title.button_3 %}{{ form_title.button_3 }}{% else %}ОФОРМИТЬ
+                        {% endif %}{% endif %}</button>
+	            </div>
+	          </form>
+		      </div>
+		    </div>
+
+
+
+
+
 
                     </div>
                 </div>
-                <div class="t-popup__close t-popup__block-close"><button type="button" class="t-popup__close-wrapper t-popup__block-close-button" aria-label="Закрыть диалог"><svg role="presentation" class="t-popup__close-icon" width="23px" height="23px" viewBox="0 0 23 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g stroke="none" stroke-width="1" fill="#fff" fill-rule="evenodd"><rect transform="translate(11.313708, 11.313708) rotate(-45.000000) translate(-11.313708, -11.313708) " x="10.3137085" y="-3.6862915" width="2" height="30"/><rect transform="translate(11.313708, 11.313708) rotate(-315.000000) translate(-11.313708, -11.313708) " x="10.3137085" y="-3.6862915" width="2" height="30"/></g></svg></button></div>
-            </div>
+              </div>
         </div>
         <script>
             t_onReady(function() {
