--- a/start_page/templates/start_page/pop_up/little.html
+++ b/start_page/templates/start_page/pop_up/little.html
@@ -1,23 +1,97 @@
 {% load static %}
 
 
+<div id="rec569212928" class="r t-rec" style=" " data-animationappear="off" data-record-type="868">
+    <!-- t868 -->
+    <div class="t868">
+        <div class="t-popup" data-tooltip-hook="#popup:embed1000" role="dialog" aria-modal="true" tabindex="-1">
+            <div class="t-popup__container t-width t-width_10">
+                <div class="t868__code-wrap">
 
 
-    <div id="rec569212928" class="r t-rec" style=" " data-animationappear="off" data-record-type="868">
-        <!-- t868 -->
-        <div class="t868">
-            <div class="t-popup" data-tooltip-hook="#popup:embed1000" role="dialog" aria-modal="true" tabindex="-1">
-                <div class="t-popup__container t-width t-width_10">
-                    <div class="t868__code-wrap">
 
-                        <script id="7fb603866fefba39ef9f860691970903bd8b21b3" src="https://ymclub.getcourse.ru/pl/lite/widget/script?id=872785"></script>
+                    <div class="modal-header t-popup__close t-popup__block-close">
+                        <button type="button" class="close d-flex align-items-center justify-content-center t-popup__block-close-button t-popup__close-wrapper" data-dismiss="modal" aria-label="Close">
 
-                    </div>
+                        </button>
+		            </div>
+
+		      <div class="modal-body p-4 py-5 p-md-5">
+		      	<h3 class="text-center mb-3">{% if form_title == None %}
+                                        Оформить подписку на месяц тариф "Новичок" на июль
+                                        {% else %}{% if form_title.title1_1 %}{{ form_title.title1_1 }}
+                                        {% else %}
+                                        Оформить подписку на месяц тариф "Новичок" на июль
+                                        {% endif %}
+                                        {% endif %}</h3>
+
+		      	<form method="post" action="{% url 'thanks' %}" class="signup-form">
+                    {% csrf_token %}
+		      		<div class="form-group mb-2">
+		      			<label for="name">Ваше имя</label>
+		      			{{ form.name }}
+		      		</div>
+		      		<div class="form-group mb-2">
+		      			<label for="phone">Ваш телефон</label>
+		      			{{ form.phone }}
+		      		</div>
+	            <div class="form-group mb-2">
+	            	<label for="telegram">Telegram</label>
+	                {{ form.telegram }}
+	            </div>
+                    <input type="hidden" name="source" value="Сайт"/>
+                    <input type="hidden" name="price" value="{% if aboniment_list != None %}{% if aboniment_list.price_1 %}{{ aboniment_list.price_1 }}{% endif %}{% endif %}"/>
+
+					<h4 class="text-left mb-3">{% if form_title == None %}
+						Онлайн клуб йоги и медитации - подписка на июль
+                                        {% else %}{% if form_title.title2_1 %}{{ form_title.title2_1 }}
+
+										{% if aboniment_list != None %}
+										{% if aboniment_list.price_1 %}<span style="float:right">
+                                        <s>{{ aboniment_list.old_price_1 }}₽</s> {{ aboniment_list.price_1 }}₽</span>
+                                        {% endif %}
+                                        {% endif %}
+
+
+
+
+                                        {% else %}
+                                        Онлайн клуб йоги и медитации - подписка на июль
+                                        {% endif %}
+                                        {% endif %}</h4>
+                    <br>
+
+                    <h6 class="text-left mb-3">{% if form_title == None %}
+						                Лучший продукт на рынке
+                                        {% else %}{% if form_title.desc_1 %}{{ form_title.desc_1 }}
+
+                                        {% else %}
+
+						                Лучший продукт на рынке
+                                        {% endif %}
+                                        {% endif %}</h6>
+
+
+
+
+
+
+	            <div class="form-group mb-2">
+	            	<button type="submit" class="form-control btn btn-primary rounded submit px-3">
+                        {% if form_title == None %}ОФОРМИТЬ{% else %}
+                        {% if form_title.button_1 %}{{ form_title.button_1 }}{% else %}ОФОРМИТЬ
+                        {% endif %}{% endif %}</button>
+	            </div>
+	          </form>
+		      </div>
+		    </div>
+
                 </div>
-                <div class="t-popup__close t-popup__block-close"><button type="button" class="t-popup__close-wrapper t-popup__block-close-button" aria-label="Закрыть диалог"><svg role="presentation" class="t-popup__close-icon" width="23px" height="23px" viewBox="0 0 23 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g stroke="none" stroke-width="1" fill="#fff" fill-rule="evenodd"><rect transform="translate(11.313708, 11.313708) rotate(-45.000000) translate(-11.313708, -11.313708) " x="10.3137085" y="-3.6862915" width="2" height="30"/><rect transform="translate(11.313708, 11.313708) rotate(-315.000000) translate(-11.313708, -11.313708) " x="10.3137085" y="-3.6862915" width="2" height="30"/></g></svg></button></div>
             </div>
+
         </div>
-        <script>
+    </div>
+    <script>
             t_onReady(function() {
                 setTimeout(function() {
                     t_onFuncLoad('t868_initPopup', function() {
@@ -25,5 +99,6 @@
                     });
                 }, 500);
             });
-        </script>
-    </div>
+
+    </script>
+</div>
