--- a/start_page/templates/start_page/pop_up/6.html
+++ b/start_page/templates/start_page/pop_up/6.html
@@ -40,6 +40,8 @@
 	                {{ form.telegram }}
 	            </div>
                     <input type="hidden" name="source" value="Сайт"/>
+                    <input type="hidden" name="offer" value="{% if aboniment_list.title1_6 %}{{ aboniment_list.title1_6 }}{% endif %}"/>
+                    <input type="hidden" name="buy_chat" value="{% if aboniment_list.buy_chat_6 %}{{ aboniment_list.buy_chat_6 }}{% endif %}"/>
                     <input type="hidden" name="price" value="{% if aboniment_list != None %}{% if aboniment_list.price_6 %}{{ aboniment_list.price_6 }}{% endif %}{% endif %}"/>
 
 					<h4 class="text-left mb-3">{% if form_title == None %}
