--- a/start_page/templates/start_page/pop_up/hard.html
+++ b/start_page/templates/start_page/pop_up/hard.html
@@ -44,6 +44,8 @@
 	                {{ form.telegram }}
 	            </div>
                     <input type="hidden" name="source" value="Сайт"/>
+                    <input type="hidden" name="offer" value="{% if aboniment_list.title1_3 %}{{ aboniment_list.title1_3 }}{% endif %}"/>
+                    <input type="hidden" name="buy_chat" value="{% if aboniment_list.buy_chat_3 %}{{ aboniment_list.buy_chat_3 }}{% endif %}"/>
                     <input type="hidden" name="price" value="{% if aboniment_list != None %}{% if aboniment_list.price_3 %}{{ aboniment_list.price_3 }}{% endif %}{% endif %}"/>
 
 					<h4 class="text-left mb-3">{% if form_title == None %}
