--- a/start_page/templates/start_page/pop_up/medium.html
+++ b/start_page/templates/start_page/pop_up/medium.html
@@ -45,6 +45,8 @@
 	                {{ form.telegram }}
 	            </div>
                     <input type="hidden" name="source" value="Сайт"/>
+                    <input type="hidden" name="offer" value="{% if aboniment_list.title1_2 %}{{ aboniment_list.title1_2 }}{% endif %}"/>
+                    <input type="hidden" name="buy_chat" value="{% if aboniment_list.buy_chat_2 %}{{ aboniment_list.buy_chat_2 }}{% endif %}"/>
                     <input type="hidden" name="price" value="{% if aboniment_list != None %}{% if aboniment_list.price_2 %}{{ aboniment_list.price_2 }}{% endif %}{% endif %}"/>
 
 					<h4 class="text-left mb-3">{% if form_title == None %}
