--- a/start_page/templates/start_page/thanks.html
+++ b/start_page/templates/start_page/thanks.html
@@ -5,6 +5,8 @@
 <div id="content" class="content">
     <div class="homepage-personal a-pagepiling">
         <h1>{{ name }}, благодарим Вас за заявку.<br>Скоро с Вами свяжутся.<br>Проверьте контактные данные {{ phone }}</h1>
+        {% if link %}<br><br>Что бы получить купленный
+        материал перейдите по ссылке <a href="{{ link }}">{{ link }}</a><br><br>{% endif %}
                 <button class="btn"><a href="/">Вернуться на главную</a></button>
                                     </div>
 
