--- a/start_page/templates/start_page/pop_up/7_day.html
+++ b/start_page/templates/start_page/pop_up/7_day.html
@@ -41,6 +41,7 @@
 	            </div>
                     <input type="hidden" name="source" value="Сайт"/>
                     <input type="hidden" name="offer" value="{% if leads.title1_1 %}{{ leads.title1_1 }}{% else %}Бесплатный оффер{% endif %}"/>
+                    <input type="hidden" name="buy_chat" value="{% if leads.buy_chat %}{{ leads.buy_chat }}{% endif %}"/>
                     <input type="hidden" name="price" value="0"/>
 
 					<h4 class="text-left mb-3">{% if free_form_title == None %}
