--- a/start_page/templates/start_page/pop_up/9.html
+++ b/start_page/templates/start_page/pop_up/9.html
@@ -42,6 +42,7 @@
                     <input type="hidden" name="source" value="Сайт"/>
                     <input type="hidden" name="offer" value="{% if aboniment_list.title1_9 %}{{ aboniment_list.title1_9 }}{% endif %}"/>
                     <input type="hidden" name="buy_chat" value="{% if aboniment_list.buy_chat_9 %}{{ aboniment_list.buy_chat_9 }}{% endif %}"/>
+                    <input type="hidden" name="dlina" value="{% if aboniment_list.dlina_9 %}{{ aboniment_list.dlina_9 }}{% endif %}"/>
                     <input type="hidden" name="price" value="{% if aboniment_list != None %}{% if aboniment_list.price_9 %}{{ aboniment_list.price_9 }}{% endif %}{% endif %}"/>
 
 					<h4 class="text-left mb-3">{% if form_title == None %}
